--- a/index.html
+++ b/index.html
@@ -3,40 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Overview</title>
+    <title>Incorrect Heading Order</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="header">
-            <h2>Welcome!</h3>
-            <h1>Company Overview</h3>
-            <nav>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </nav>
-        </div>
+    <header>
+        <h1>Our Company</h1>
+    </header>
 
-        <div class="main-content">
-            <div class="intro">
-                <b>Welcome to Our Company</b>
-                <p>We provide top-notch services to meet your needs. Our team is dedicated to ensuring customer satisfaction.</p>
-                <img src="https://via.placeholder.com/150" width="150" height="150">
+    <main>
+        <section>
+            <h2>About Us</h2>
+            <p>We are a leading company in our industry, committed to providing quality services.</p>
 
-            </div>
+            <h4>Our Mission</h4>
+            <p>Our mission is to deliver excellence in every project we undertake.</p>
 
-            <div class="sidebar">
-                <b>Latest News</b>
-                <br>
-                Stay updated with the latest news and updates from our company. Check out our blog for more!
-            </div>
-        </div>
+            <h2>Our Team</h2>
+            <p>Meet the dedicated professionals who make our company great.</p>
 
-        <div class="footer">
-            2024 Company Name. All rights reserved.
-        </div>
-    </div>
+            <h3>John Doe - CEO</h3>
+            <p>John has over 20 years of experience in the industry.</p>
+
+            <h4>Jane Smith - CTO</h4>
+            <p>Jane is an expert in technology and innovation.</p>
+        </section>
+
+        <section>
+            <h2>Services</h2>
+            <p>We offer a wide range of services to meet your needs.</p>
+
+            <h4>Web Development</h4>
+            <p>We create responsive and high-performance websites.</p>
+
+            <h3>Consulting</h3>
+            <p>Our consulting services help businesses achieve their goals.</p>
+        </section>
+    </main>
+
+    <footer>
+        <h4>Contact Us</h4>
+        <p>&copy; 2024 Our Company. All rights reserved.</p>
+    </footer>
 </body>
 </html>
